modules/hosts/b550/k3s/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  type: NodePort
  selector:
    app: forgejo
  ports:
    - name: ssh
      protocol: TCP
      port: 2222
      targetPort: 2222
      nodePort: 30222
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  type: ClusterIP
  selector:
    app: forgejo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
