modules/hosts/b550/k3s/forgejo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - git.cs.groovyreserve.com
        - git.groovyreserve.com
  rules:
    - host: git.cs.groovyreserve.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port:
                  number: 80
    - host: git.groovyreserve.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port:
                  number: 80
